<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">信息传递</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">保存</string>
    <string name="router_ip">文件地址</string>
    <string name="username">路由用户</string>
    <string name="password">路由密码</string>
    <string name="wifi_name">wifi名称</string>
    <string name="wifi_pwd">wifi密码</string>
    <string name="msg_infor">设置短信发送时间</string>

</resources>
