<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edtAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/router_ip"
        android:textSize="@dimen/size_edt" >

    </EditText>

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:textSize="@dimen/size_edt" />

    <EditText
        android:id="@+id/edtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/size_edt" />

    <EditText
        android:id="@+id/edtWifiUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wifi_name"
        android:textSize="@dimen/size_edt" >

    </EditText>

    <EditText
        android:id="@+id/edtWifiPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wifi_pwd"
        android:inputType="textPassword"
        android:textSize="@dimen/size_edt" />

</LinearLayout>